unpackaged/main/default/objects/Upgrade_Request__c/Upgrade_Request__c.object-meta.xml
<CustomObject>
    <description>Requests received to upgrade servers on RALS Software Systems</description>
    <label>Installation Service Request</label>
    <nameField>
        <displayFormat>ISR-{000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installation Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>