unpackaged/main/default/objects/Upgrade_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installation Service Requests</relationshipLabel>
    <relationshipName>Installation_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>