unpackaged/main/default/objects/Upgrade_Request__c/fields/Account_f__c.field-meta.xml
<CustomField>
    <fullName>Account_f__c</fullName>
    <formula>Server__r.Account__c &amp; ", " &amp;  State_f__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>