unpackaged/main/default/objects/Upgrade_Request__c/fields/Acct_f__c.field-meta.xml
<CustomField>
    <fullName>Acct_f__c</fullName>
    <formula>Server__r.Alere_System__r.Parent_Account__r.Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct#</label>
    <type>Text</type>
</CustomField>