unpackaged/main/default/objects/Upgrade_Request__c/fields/Action_expected_after_upgrade__c.field-meta.xml
<CustomField>
    <fullName>Action_expected_after_upgrade__c</fullName>
    <label>Expected Outcome</label>
    <type>TextArea</type>
</CustomField>