unpackaged/main/default/objects/Upgrade_Request__c/fields/Additional_General_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_General_Information__c</fullName>
    <label>Information Sent with Each Transaction</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>