unpackaged/main/default/objects/Upgrade_Request__c/fields/Additional_notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_notes__c</fullName>
    <inlineHelpText>Any additional information needed</inlineHelpText>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>