unpackaged/main/default/objects/Upgrade_Request__c/fields/Assign_to__c.field-meta.xml
<CustomField>
    <fullName>Assign_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Upgrade_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>