unpackaged/main/default/objects/Upgrade_Request__c/fields/Assistance_Required_for_Testing__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Required_for_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assistance Required for Testing</label>
    <type>Checkbox</type>
</CustomField>