unpackaged/main/default/objects/Upgrade_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>if request originated from Customer Support case</description>
    <inlineHelpText>if request originated from Customer Support case</inlineHelpText>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Upgrade_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>