unpackaged/main/default/objects/Upgrade_Request__c/fields/Change_Applies_to_These_Devices_Meters__c.field-meta.xml
<CustomField>
    <fullName>Change_Applies_to_These_Devices_Meters__c</fullName>
    <label>Change Applies to These Devices/Meters</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>