unpackaged/main/default/objects/Upgrade_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup field used to create related Contact and Role</description>
    <inlineHelpText>Primary Contact.  Additional contacts can be added after saving.</inlineHelpText>
    <label>Contact to Add</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Upgrade_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>