unpackaged/main/default/objects/Upgrade_Request__c/fields/Contact_count__c.field-meta.xml
<CustomField>
    <fullName>Contact_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>every time a new contact is added through the Contact field, this field sum will increase by 1</description>
    <label>Contact count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>