unpackaged/main/default/objects/Upgrade_Request__c/fields/Customer_Verified_LIS_Vendor_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verified_LIS_Vendor_Readiness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Verified LIS Vendor Readiness</label>
    <type>Checkbox</type>
</CustomField>