unpackaged/main/default/objects/Upgrade_Request__c/fields/Date_to_Reevaluate__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Reevaluate__c</fullName>
    <inlineHelpText>Date to come off hold for reevaluation</inlineHelpText>
    <label>Date to Reevaluate</label>
    <type>Date</type>
</CustomField>