unpackaged/main/default/objects/Upgrade_Request__c/fields/Desired_Version__c.field-meta.xml
<CustomField>
    <fullName>Desired_Version__c</fullName>
    <description>Version desired by customer</description>
    <inlineHelpText>What version is the customer expecting?</inlineHelpText>
    <label>Desired Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Version</fullName>
            </value>
            <value>
                <fullName>Future Version</fullName>
            </value>
            <value>
                <fullName>Match Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>