unpackaged/main/default/objects/Upgrade_Request__c/fields/Existing_Version_and_Build__c.field-meta.xml
<CustomField>
    <fullName>Existing_Version_and_Build__c</fullName>
    <label>Existing Version at time of Request</label>
    <length>100</length>
    <type>Text</type>
</CustomField>