unpackaged/main/default/objects/Upgrade_Request__c/fields/HIS_Vendor__c.field-meta.xml
<CustomField>
    <fullName>HIS_Vendor__c</fullName>
    <label>HIS Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allscripts</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>Cloverleaf</fullName>
            </value>
            <value>
                <fullName>Corepoint</fullName>
            </value>
            <value>
                <fullName>Eclipsys</fullName>
            </value>
            <value>
                <fullName>E-GATE</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Ensemble</fullName>
            </value>
            <value>
                <fullName>EPIC</fullName>
            </value>
            <value>
                <fullName>GE Healthcare</fullName>
            </value>
            <value>
                <fullName>Invision</fullName>
            </value>
            <value>
                <fullName>LabCorp</fullName>
            </value>
            <value>
                <fullName>McKesson Paragon</fullName>
            </value>
            <value>
                <fullName>McKesson Star</fullName>
            </value>
            <value>
                <fullName>Medhost</fullName>
            </value>
            <value>
                <fullName>Meditech (6.x)</fullName>
            </value>
            <value>
                <fullName>Meditech HCA</fullName>
            </value>
            <value>
                <fullName>Meditech Magic</fullName>
            </value>
            <value>
                <fullName>NexGen</fullName>
            </value>
            <value>
                <fullName>Novius</fullName>
            </value>
            <value>
                <fullName>NTTData</fullName>
            </value>
            <value>
                <fullName>Orchard</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PBAR</fullName>
            </value>
            <value>
                <fullName>QuadraMed</fullName>
            </value>
            <value>
                <fullName>Rhapsody</fullName>
            </value>
            <value>
                <fullName>SCC Soft</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>Sunquest</fullName>
            </value>
            <value>
                <fullName>Sunquest IGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>