unpackaged/main/default/objects/Upgrade_Request__c/fields/Implementation_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Assessment_Notes__c</fullName>
    <label>Implementation Assessment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>