unpackaged/main/default/objects/Upgrade_Request__c/fields/Implementation_Project__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Project</label>
    <referenceTo>Implementation_Project__c</referenceTo>
    <relationshipName>Upgrade_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>