unpackaged/main/default/objects/Upgrade_Request__c/fields/Installation_Modification__c.field-meta.xml
<CustomField>
    <fullName>Installation_Modification__c</fullName>
    <label>Installation Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Upgrade</fullName>
            </value>
            <value>
                <fullName>Interface Modification</fullName>
            </value>
            <value>
                <fullName>Microsoft Patches</fullName>
            </value>
            <value>
                <fullName>Microsoft SQL Upgrade</fullName>
            </value>
            <value>
                <fullName>Microsoft Operating System Upgrade</fullName>
            </value>
            <value>
                <fullName>Server Swap</fullName>
            </value>
            <value>
                <fullName>Split Application &amp; Database</fullName>
            </value>
            <value>
                <fullName>DE Upgrade</fullName>
            </value>
            <value>
                <fullName>Split Application &amp; DE</fullName>
            </value>
            <value>
                <fullName>DE Swap</fullName>
            </value>
            <value>
                <fullName>Other Modification</fullName>
                <label>Other Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>