unpackaged/main/default/objects/Upgrade_Request__c/fields/Interface_Modification_Type__c.field-meta.xml
<CustomField>
    <fullName>Interface_Modification_Type__c</fullName>
    <label>Interface Modification Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Installation_Modification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add cartridges, analytes or panels</fullName>
            </value>
            <value>
                <fullName>New ADT/LIS interface</fullName>
            </value>
            <value>
                <fullName>Switch to existing ADT/LIS interface</fullName>
            </value>
            <value>
                <fullName>Changes to the logic</fullName>
            </value>
            <value>
                <fullName>Temporary test interface</fullName>
            </value>
            <value>
                <fullName>Additional devices (current model type)</fullName>
            </value>
            <value>
                <fullName>Results interface</fullName>
            </value>
            <value>
                <fullName>Add LDAP connection</fullName>
            </value>
            <value>
                <fullName>Additional facilities interface</fullName>
            </value>
            <value>
                <fullName>Additional AegisPOC instance</fullName>
            </value>
            <value>
                <fullName>Other modification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>