unpackaged/main/default/objects/Upgrade_Request__c/fields/Interface_Scope__c.field-meta.xml
<CustomField>
    <fullName>Interface_Scope__c</fullName>
    <label>Scope Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>