unpackaged/main/default/objects/Upgrade_Request__c/fields/Krow_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Krow Project related to this upgrade request</description>
    <label>Krow Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipName>Upgrade_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>