unpackaged/main/default/objects/Upgrade_Request__c/fields/LIS_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>LIS_Assessment_Notes__c</fullName>
    <label>Assessment</label>
    <type>TextArea</type>
</CustomField>