unpackaged/main/default/objects/Upgrade_Request__c/fields/LIS_Vendor__c.field-meta.xml
<CustomField>
    <fullName>LIS_Vendor__c</fullName>
    <label>LIS Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allscripts</fullName>
            </value>
            <value>
                <fullName>Cerner Classic</fullName>
            </value>
            <value>
                <fullName>Cerner Millennium</fullName>
            </value>
            <value>
                <fullName>CHCS</fullName>
            </value>
            <value>
                <fullName>Cyberlab</fullName>
            </value>
            <value>
                <fullName>EPIC Beaker</fullName>
            </value>
            <value>
                <fullName>EPIC Birdges</fullName>
            </value>
            <value>
                <fullName>Evident</fullName>
            </value>
            <value>
                <fullName>GE/TripleG Centricity</fullName>
            </value>
            <value>
                <fullName>Keane Lab Fusion</fullName>
            </value>
            <value>
                <fullName>Keane Optimum</fullName>
            </value>
            <value>
                <fullName>LabCorp</fullName>
            </value>
            <value>
                <fullName>McKesson HLAB</fullName>
            </value>
            <value>
                <fullName>McKesson Paragon</fullName>
            </value>
            <value>
                <fullName>MedHost HMS</fullName>
            </value>
            <value>
                <fullName>MediSolutions TD-Synergy</fullName>
            </value>
            <value>
                <fullName>Meditech Expanse</fullName>
            </value>
            <value>
                <fullName>Meditech (6.x)</fullName>
            </value>
            <value>
                <fullName>Meditech HCA</fullName>
            </value>
            <value>
                <fullName>Meditech Magic</fullName>
            </value>
            <value>
                <fullName>MedSphere OpenVista</fullName>
            </value>
            <value>
                <fullName>NOVIUS Lab</fullName>
            </value>
            <value>
                <fullName>OPUS/Next Gen OpusLab</fullName>
            </value>
            <value>
                <fullName>Orchard Harvest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Quadramed</fullName>
            </value>
            <value>
                <fullName>RPMS</fullName>
            </value>
            <value>
                <fullName>SCC Soft</fullName>
            </value>
            <value>
                <fullName>Sunquest AI</fullName>
            </value>
            <value>
                <fullName>Sunquest IGo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>