unpackaged/main/default/objects/Upgrade_Request__c/fields/Location_Conditional_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Location_Conditional_Considerations__c</fullName>
    <label>Location / Conditional Considerations</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>