unpackaged/main/default/objects/Upgrade_Request__c/fields/New_Request__c.field-meta.xml
<CustomField>
    <fullName>New_Request__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New Request</label>
    <type>Checkbox</type>
</CustomField>