unpackaged/main/default/objects/Upgrade_Request__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <formula>RCS_ID__r.Parent_Account__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health System or Enterprise</label>
    <type>Text</type>
</CustomField>