unpackaged/main/default/objects/Upgrade_Request__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RALS Web3</fullName>
            </value>
            <value>
                <fullName>AegisPOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>