unpackaged/main/default/objects/Upgrade_Request__c/fields/QI__c.field-meta.xml
<CustomField>
    <fullName>QI__c</fullName>
    <inlineHelpText>QI# or NC#</inlineHelpText>
    <label>QI#</label>
    <length>25</length>
    <type>Text</type>
</CustomField>