unpackaged/main/default/objects/Upgrade_Request__c/fields/QI_Related__c.field-meta.xml
<CustomField>
    <fullName>QI_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QI Related</label>
    <type>Checkbox</type>
</CustomField>