unpackaged/main/default/objects/Upgrade_Request__c/fields/RALS_Software_System__c.field-meta.xml
<CustomField>
    <fullName>RALS_Software_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If upgrade version = Match Test, input RCS ID of test system for reference</description>
    <inlineHelpText>Installation ID of test system to match</inlineHelpText>
    <label>Test System ID</label>
    <referenceTo>RALS_System__c</referenceTo>
    <relationshipName>Upgrade_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>