unpackaged/main/default/objects/Upgrade_Request__c/fields/RCS_ID__c.field-meta.xml
<CustomField>
    <fullName>RCS_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation ID</label>
    <referenceTo>RALS_System__c</referenceTo>
    <relationshipName>Upgrade_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>