unpackaged/main/default/objects/Upgrade_Request__c/fields/Reason_Denied__c.field-meta.xml
<CustomField>
    <fullName>Reason_Denied__c</fullName>
    <description>Why installation change request was denied</description>
    <inlineHelpText>Why installation change request was denied</inlineHelpText>
    <label>Reason Denied</label>
    <type>TextArea</type>
</CustomField>