unpackaged/main/default/objects/Upgrade_Request__c/fields/Reason_for_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Upgrade__c</fullName>
    <label>Reason for Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>