unpackaged/main/default/objects/Upgrade_Request__c/fields/Remote_Connection__c.field-meta.xml
<CustomField>
    <fullName>Remote_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remote Connection</label>
    <referenceTo>Remote_Connection__c</referenceTo>
    <relationshipName>Upgrade_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>