unpackaged/main/default/objects/Upgrade_Request__c/fields/Server__c.field-meta.xml
<CustomField>
    <fullName>Server__c</fullName>
    <description>Server to upgrade</description>
    <label>Server</label>
    <referenceTo>Servers__c</referenceTo>
    <relationshipName>Upgrade_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>