unpackaged/main/default/objects/Upgrade_Request__c/fields/Server_Swap__c.field-meta.xml
<CustomField>
    <fullName>Server_Swap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if server swap is requested, not just upgrade</description>
    <inlineHelpText>Check if server swap is requested</inlineHelpText>
    <label>Server Swap</label>
    <type>Checkbox</type>
</CustomField>