unpackaged/main/default/objects/Upgrade_Request__c/fields/Server_Type__c.field-meta.xml
<CustomField>
    <fullName>Server_Type__c</fullName>
    <formula>TEXT(Server__r.Cupid_RalsServerType__c)+ ", " + Server__r.Test_or_Production__c</formula>
    <label>Server Type</label>
    <type>Text</type>
</CustomField>