unpackaged/main/default/objects/Upgrade_Request__c/fields/Service_Pack__c.field-meta.xml
<CustomField>
    <fullName>Service_Pack__c</fullName>
    <label>Service Pack (if applicable)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>