unpackaged/main/default/objects/Upgrade_Request__c/fields/Short_description_of_fix_feature_update__c.field-meta.xml
<CustomField>
    <fullName>Short_description_of_fix_feature_update__c</fullName>
    <description>Problem that desired upgrade should fix</description>
    <inlineHelpText>What problem should the upgrade fix?</inlineHelpText>
    <label>Short description of fix/feature/update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>