unpackaged/main/default/objects/Upgrade_Request__c/fields/State_f__c.field-meta.xml
<CustomField>
    <fullName>State_f__c</fullName>
    <formula>Server__r.Alere_System__r.Account_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>