unpackaged/main/default/objects/Upgrade_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Limited Launch</fullName>
            </value>
            <value>
                <fullName>Sent for Creation</fullName>
                <label>Processed</label>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Active Project</fullName>
                <isActive>false</isActive>
                <label>Active Project</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>