unpackaged/main/default/objects/Upgrade_Request__c/fields/Targeted_Release_version__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Release_version__c</fullName>
    <description>Future version expected to resolve issue</description>
    <inlineHelpText>What future version expected to resolve issue?</inlineHelpText>
    <label>Targeted Release Version (old)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>