unpackaged/main/default/objects/Upgrade_Request__c/fields/Targeted_Release_Version_New__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Release_Version_New__c</fullName>
    <label>Targeted Release Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sympheos</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.10</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.11</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.12</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.13</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.14</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.15</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.16</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.17</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.18</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.19</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.8</fullName>
            </value>
            <value>
                <fullName>Web3 - 5.9</fullName>
            </value>
            <value>
                <fullName>Web3 - 6.0</fullName>
            </value>
            <value>
                <fullName>Web3 - 6.0 SP1</fullName>
            </value>
            <value>
                <fullName>Web3 - 6.0 SP2</fullName>
            </value>
            <value>
                <fullName>Web3 - 6.0 SP3</fullName>
            </value>
            <value>
                <fullName>Web3 - 6.0 SP4</fullName>
            </value>
            <value>
                <fullName>Web3 - 6.0 SP5</fullName>
            </value>
            <value>
                <fullName>Web3 - 6.0 SP6</fullName>
            </value>
            <value>
                <fullName>Web3 - 6.0 SP7</fullName>
            </value>
            <value>
                <fullName>Web3 - 6.0 SP8</fullName>
            </value>
            <value>
                <fullName>RALS LiNK</fullName>
            </value>
            <value>
                <fullName>AegisPOC - 3.2</fullName>
            </value>
            <value>
                <fullName>AegisPOC - 4.1</fullName>
            </value>
            <value>
                <fullName>AegisPOC - 4.2</fullName>
            </value>
            <value>
                <fullName>AegisPOC - 4.5</fullName>
            </value>
            <value>
                <fullName>AegisPOC - 4.6</fullName>
            </value>
            <value>
                <fullName>AegisPOC - 4.7</fullName>
            </value>
            <value>
                <fullName>AegisPOC - 4.7P1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>