unpackaged/main/default/objects/Upgrade_Request__c/recordTypes/Modification_AegisPOC.recordType-meta.xml
<RecordType>
    <fullName>Modification_AegisPOC</fullName>
    <active>true</active>
    <label>Modification (AegisPOC)</label>
</RecordType>