unpackaged/main/default/objects/Upgrade_Request__c/recordTypes/Modification_RALS.recordType-meta.xml
<RecordType>
    <fullName>Modification_RALS</fullName>
    <active>true</active>
    <label>Modification (RALS)</label>
</RecordType>