unpackaged/main/default/objects/Upgrade_Request__c/recordTypes/Requested.recordType-meta.xml
<RecordType>
    <fullName>Requested</fullName>
    <active>true</active>
    <label>Upgrade (RALS)</label>
</RecordType>