unpackaged/main/default/objects/Upgrade_Request__c/recordTypes/Upgrade_Aegis.recordType-meta.xml
<RecordType>
    <fullName>Upgrade_Aegis</fullName>
    <active>true</active>
    <label>Upgrade (AegisPOC)</label>
</RecordType>