unpackaged/main/default/objects/Upgrade_Request__c/validationRules/Contact_must_have.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_have</fullName>
    <active>true</active>
    <description>Must have at least one Contacts and Roles related record</description>
    <errorConditionFormula>And( 
CreatedDate != NOW(), 
ISBLANK(Contact__c ),
Contact_count__c &lt; 1
)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Please include at least one contact.  Additional contacts can be entered on the following page.</errorMessage>
</ValidationRule>