unpackaged/main/default/objects/Upgrade_Request__c/validationRules/Date_to_Reevaluate_must_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_to_Reevaluate_must_be_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>Date_to_Reevaluate__c   &lt;   TODAY()</errorConditionFormula>
    <errorDisplayField>Date_to_Reevaluate__c</errorDisplayField>
    <errorMessage>Date to Reevaluate must be in the future</errorMessage>
</ValidationRule>