unpackaged/main/default/objects/Upgrade_Request__c/validationRules/Denied_must_have_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Denied_must_have_reason</fullName>
    <active>true</active>
    <errorConditionFormula>And( 
 ISPICKVAL( Status__c , "Denied") ,  
 ISBLANK( Reason_Denied__c ) 
)</errorConditionFormula>
    <errorDisplayField>Reason_Denied__c</errorDisplayField>
    <errorMessage>Provide the reason this upgrade request is Denied.</errorMessage>
</ValidationRule>