unpackaged/main/default/objects/Upgrade_Request__c/validationRules/Hold_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Hold_Requires_Date</fullName>
    <active>true</active>
    <description>If Status = Hold, there must be a Date to Reevaluate entered</description>
    <errorConditionFormula>AND(
   ISPICKVAL(Status__c, "On Hold"),
  ISNULL(Date_to_Reevaluate__c) 
)</errorConditionFormula>
    <errorMessage>Please enter a Date to Reevaluate before placing on hold.</errorMessage>
</ValidationRule>