unpackaged/main/default/objects/Upgrade_Request__c/validationRules/No_editing_Denied_request.validationRule-meta.xml
<ValidationRule>
    <fullName>No_editing_Denied_request</fullName>
    <active>true</active>
    <description>Denied requests should not be edited</description>
    <errorConditionFormula>And( 
$Profile.Name != "System Administrator", 
$User.CommunityNickname != "Teresa Edsall", 
$User.CommunityNickname != "Josh Cypher", 
$User.CommunityNickname != "Wanda.McBride",
ISPICKVAL(Status__c, "Denied") 
)</errorConditionFormula>
    <errorMessage>Upgrade Requests may not be edited once Denied. Please create a new Upgrade Request if needed.</errorMessage>
</ValidationRule>