unpackaged/main/default/objects/Upgrade_Request__c/validationRules/Sent_for_Creation_must_have_Assigned_to.validationRule-meta.xml
<ValidationRule>
    <fullName>Sent_for_Creation_must_have_Assigned_to</fullName>
    <active>true</active>
    <description>Sent for Creation status must have Assigned to field filled out</description>
    <errorConditionFormula>And( 
ISPICKVAL( Status__c , "Sent for Creation") , 
ISBLANK(  Assign_to__c ) 
)</errorConditionFormula>
    <errorDisplayField>Assign_to__c</errorDisplayField>
    <errorMessage>Please fill out the Assign to  field.</errorMessage>
</ValidationRule>